<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/image_info"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/img_profile"
        android:text="@string/label_username"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/img_profile"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        tools:text="Username" />

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/img_profile"
        android:text="@string/label_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/img_profile"
        android:text="@string/not_applicable"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        tools:text="Name" />

</RelativeLayout>