<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBarStyle.Gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <include
        android:id="@+id/info_view"
        layout="@layout/layout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite_white_24dp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        tools:context=".ui.detail.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.DetailFragment">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:contentDescription="@string/background_profile"
                android:src="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.051"
                tools:src="@drawable/ic_undraw_profile_pic" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/img_avatar"
                app:layout_constraintStart_toStartOf="@+id/img_avatar"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar"
                tools:text="Name" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="username" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_info"
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_repositories"
                        style="@style/TextViewStyle.Black.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toTopOf="@+id/tv_label_repositories"
                        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="20" />

                    <TextView
                        android:id="@+id/tv_label_repositories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/label_repositories"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_repositories"
                        app:layout_constraintStart_toStartOf="@+id/tv_repositories"
                        app:layout_constraintTop_toBottomOf="@+id/tv_repositories" />

                    <TextView
                        android:id="@+id/tv_followers"
                        style="@style/TextViewStyle.Black.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toTopOf="@+id/tv_label_followers"
                        app:layout_constraintEnd_toStartOf="@+id/tv_following"
                        app:layout_constraintStart_toEndOf="@+id/tv_repositories"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="10" />

                    <TextView
                        android:id="@+id/tv_label_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/label_followers"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_followers"
                        app:layout_constraintStart_toStartOf="@+id/tv_followers"
                        app:layout_constraintTop_toBottomOf="@+id/tv_followers" />

                    <TextView
                        android:id="@+id/tv_following"
                        style="@style/TextViewStyle.Black.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toTopOf="@+id/tv_label_following"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_followers"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="72" />

                    <TextView
                        android:id="@+id/tv_label_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/label_following"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_following"
                        app:layout_constraintStart_toStartOf="@+id/tv_following"
                        app:layout_constraintTop_toBottomOf="@+id/tv_following" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_info_place"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/places_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_places"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/place_line"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_marginTop="16dp"
                        android:background="#eeeeee"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/places_label" />

                    <ImageView
                        android:id="@+id/icon_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_work_black_24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/place_line" />

                    <TextView
                        android:id="@+id/tv_company_label"
                        style="@style/TextViewStyle.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_company"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_company"
                        app:layout_constraintStart_toEndOf="@+id/icon_company"
                        app:layout_constraintTop_toTopOf="@+id/icon_company" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_company_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company_label"
                        tools:text="Random Company" />

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_location_on_black_24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

                    <TextView
                        android:id="@+id/tv_location_label"
                        style="@style/TextViewStyle.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_location"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
                        app:layout_constraintStart_toEndOf="@id/icon_location"
                        app:layout_constraintTop_toTopOf="@id/icon_location" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_location_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_location_label"
                        tools:text="Random Location" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_follow"
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_height="340dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_info_place">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tab_follow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tabBackground="@android:color/white"
                        app:tabIndicatorColor="#dddddd"
                        app:tabPaddingEnd="16dp"
                        app:tabPaddingStart="16dp">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_followers" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_following" />

                    </com.google.android.material.tabs.TabLayout>

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/tab_follow_pager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>
